Update Ai chatbot task.html

--- a/Ai chatbot task.html
+++ b/Ai chatbot task.html
@@ -80,7 +80,7 @@
   #send-button {
     padding: 12px 25px;
     background: linear-gradient(145deg, #007aff, #005bb5);
-    color: white;
+    color: black;
     border: none;
     border-radius: 20px;
     cursor: pointer;
@@ -162,3 +162,4 @@
 
 </body>
 </html>
+
